syntax = "proto3";

option go_package = "github.com/matheusmosca/walrus/proto/walrus";

package walrus;

import "google/protobuf/empty.proto";

service Walrus {
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
  string topic = 1;
}

message SubscribeResponse {
  Message message = 1;
}

message PublishRequest {
  Message message = 1;
}

message Message {
  string topic = 1;
  string published_by = 2; 
  bytes body = 3;
}
